--- a/hw03_trie/pom.xml
+++ b/hw03_trie/pom.xml
@@ -7,6 +7,13 @@
     <groupId>spbau</groupId>
     <artifactId>hw03_trie</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
