--- a/hw08_mock/pom.xml
+++ b/hw08_mock/pom.xml
@@ -7,8 +7,20 @@
     <groupId>spbau</groupId>
     <artifactId>hw08_mock</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-<dependencies>
+    <dependencies>
     <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
     <dependency>
         <groupId>org.mockito</groupId>
