--- a/hw07_tree_set/pom.xml
+++ b/hw07_tree_set/pom.xml
@@ -15,5 +15,8 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 </project>
