--- a/hw10_reflector_plus/pom.xml
+++ b/hw10_reflector_plus/pom.xml
@@ -24,6 +24,7 @@
         <maven.compiler.verbose>true</maven.compiler.verbose>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <!--<build>-->
