--- a/Test3SmartListPlus/pom.xml
+++ b/Test3SmartListPlus/pom.xml
@@ -14,6 +14,8 @@
             <version>RELEASE</version>
         </dependency>
     </dependencies>
-
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
