--- a/hw08_mock/pom.xml
+++ b/hw08_mock/pom.xml
@@ -7,19 +7,6 @@
     <groupId>spbau</groupId>
     <artifactId>hw08_mock</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
     <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
     <dependency>
@@ -39,5 +26,8 @@
             <version>RELEASE</version>
         </dependency>
     </dependencies>
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
