--- a/hw09_streams/pom.xml
+++ b/hw09_streams/pom.xml
@@ -7,23 +7,6 @@
     <groupId>spbau</groupId>
     <artifactId>hw09_streams</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-
-
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -37,4 +20,8 @@
             <version>19.0</version>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
