--- a/test01_hashmap/pom.xml
+++ b/test01_hashmap/pom.xml
@@ -7,6 +7,9 @@
     <groupId>spbau</groupId>
     <artifactId>test01_hashmap</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
 </project>
