--- a/test2/pom.xml
+++ b/test2/pom.xml
@@ -7,6 +7,8 @@
     <groupId>spbau</groupId>
     <artifactId>test2</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
